Copiar o codigo do HTML do Portfolio Web

--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-Hello World
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8">
+    <title>portfolio web</title>
+  </head>
+  <body> 
+      <h1>Ana Carolina Rodrigues Santos</h1> 
+      <p> <a href="#foto minha"> Saiba Mais </a> </p>
+      <p> <a href="https://www.linkedin.com/in/ana-carolinarsantos" target="_blank"> LinkedIn </a> </p>
+      <p> <a href="#Habilidades"> Habilidades </a> </p>
+      <br>
+      <h2>Estudante de Desenvolvimento Web pela Trybe</h2> <br>
+      <img id="foto minha" src="eu_em_Ouro_Preto.jpg" alt="Ana Carolina no museu do Jeca Tatu em Itabirito" width="500 px">
+      <h3>Qem Sou Eu</h3>
+      <p>Nasci em Belo Horizonte - MG no dia 06 de julho de 1993 e após algumas mudanças de cidade como para<br>Santa Cruz Cabrália e Eunápolis, na Bahia, hoje resido em Contagem - MG com meus pais, meu irmão caçula e minha filha<br>para poder me dedicar aos estudos na Trybe. 
+      Anteriormente estava cursando o curso de Pedagogia pela UEMG, mas decidi <br> dar uma pausa para poder me qualificar na área de tecnologia, pois é um mercado que está em constante crescimento e que <br> permite tornar o mundo mais prático e acessível, além de ser muito útil para a área da educação.
+      Agora, as expectativas <br> que esse mundo da tecnologia oferece são o combustível que alimenta o meu desejo em aprofundar cada vez mais nos <br> estudos e me tornar uma desenvolvedora de sucesso!</p>
+
+      <h3 id="Habilidades"> Habilidades </h3>
+      <h4>Hard Skills (em construção):</h4>
+      <ol> <li><strong> Desenvolvimento Front-end </strong></li>
+            <li>Desenvolvimento Back-end</li>
+            <li>Javascript</li>
+            <li>SQL</li> </ol> 
+      <h4>Soft Skills</h4>
+      <ol> <li><strong>Inteligência Emocional</strong></li>
+           <li>comunicação</li>
+           <li>Colaboração</li>
+           <li><strong>Saber Aprender</strong> </li>
+          </ol>      
+  </body> 
+  </html>
